--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   width: 40px;
   height: 40px;
   border: 1px solid #ccc;
-  border-radius: 50%;
+  border-radius: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,7 +77,7 @@ body {
   border-radius: 5px;
 }
 .right button {
-  background: #2bb5a3;
+  background: #a0c565;
   color: white;
   border: none;
   padding: 12px;
